# skilllib

./: .gitignore  AGENTS.md  README.md
dev/README-maker/: SKILL.md
dev/README-maker/references/: README-GUIDE.md
dev/youtube/: SKILL.md
skiller/: README.md  prd.md  pyproject.toml  skiller.py  skiller_config.json
skiller/skiller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
